--- a/styles/tape.scss
+++ b/styles/tape.scss
@@ -82,10 +82,14 @@
 
     &--left {
       background: linear-gradient(to right, rgba(0, 140, 255, 0.25), transparent);
+      text-align: left;
+      padding-left: 1rem;
     }
 
     &--right {
       background: linear-gradient(to left, rgba(255, 60, 60, 0.25), transparent);
+      text-align: right;
+      padding-right: 1rem;
     }
 
     &--label {
@@ -100,6 +104,16 @@
       font-weight: 700;
       font-size: 1.4rem;
       color: var(--accent);
+    }
+  }
+
+  // Reset alignement for mobile
+  @media (max-width: 600px) {
+    &__cell--left,
+    &__cell--right {
+      text-align: center;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
